--- a/noconstructors-javac-gradle-example/build.gradle
+++ b/noconstructors-javac-gradle-example/build.gradle
@@ -18,5 +18,6 @@ dependencies {
 
 compileJava {
     options.annotationProcessorPath = configurations.process
+    options.compilerArgs.addAll(['--release', '6'])
     options.compilerArgs.add('-Xplugin:NoConstructorsPlugin')
 }
