Use redefine bytebuddy entry point

--- a/noconstructors-bytebuddy-gradle-example/build.gradle
+++ b/noconstructors-bytebuddy-gradle-example/build.gradle
@@ -31,6 +31,9 @@ compileJava {
 }
 
 byteBuddy {
+    initialization {
+        entryPoint = 'REDEFINE'
+    }
     transformation {
         plugin = 'com.hunterwb.noconstructors.bytebuddy.NoConstructorsPlugin'
         classPath = configurations.process
