--- a/noconstructors-javac-maven-example/pom.xml
+++ b/noconstructors-javac-maven-example/pom.xml
@@ -31,7 +31,7 @@
                     <annotationProcessorPaths>
                         <path>
                             <groupId>com.hunterwb.noconstructors</groupId>
-                            <artifactId>noconstructors-javac</artifactId>
+                            <artifactId>noconstructors-javac-plugin</artifactId>
                             <version>${project.version}</version>
                         </path>
                     </annotationProcessorPaths>
