--- a/noconstructors-javac-plugin/pom.xml
+++ b/noconstructors-javac-plugin/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.hunterwb.noconstructors</groupId>
-    <artifactId>noconstructors-javac</artifactId>
+    <artifactId>noconstructors-javac-plugin</artifactId>
     <version>0.1.0-SNAPSHOT</version>
 
     <properties>
